cmake_minimum_required(VERSION 2.8)
project(QtAll CXX)

add_subdirectory(qtbase)
add_subdirectory(qtsvg)
add_subdirectory(qtdeclarative)
add_subdirectory(qtactiveqt)
add_subdirectory(qtscript)
add_subdirectory(qtmultimedia)
add_subdirectory(qttools)
add_subdirectory(qtxmlpatterns)
add_subdirectory(qttranslations)
add_subdirectory(qtdoc)
add_subdirectory(qtrepotools)
add_subdirectory(qtqa)
add_subdirectory(qtlocation)
add_subdirectory(qtsensors)
add_subdirectory(qtconnectivity)
add_subdirectory(qtwayland)
add_subdirectory(qt3d)
add_subdirectory(qtimageformats)
add_subdirectory(qtgraphicaleffects)
add_subdirectory(qtquickcontrols)
add_subdirectory(qtserialbus)
add_subdirectory(qtserialport)
add_subdirectory(qtx11extras)
add_subdirectory(qtmacextras)
add_subdirectory(qtwinextras)
add_subdirectory(qtandroidextras)
add_subdirectory(qtwebsockets)
add_subdirectory(qtwebchannel)
add_subdirectory(qtwebengine)
add_subdirectory(qtcanvas3d)
add_subdirectory(qtwebview)
add_subdirectory(qtquickcontrols2)
add_subdirectory(qtpurchasing)
add_subdirectory(qtcharts)
add_subdirectory(qtdatavis3d)
add_subdirectory(qtvirtualkeyboard)
add_subdirectory(qtgamepad)
add_subdirectory(qtscxml)
add_subdirectory(qtspeech)
add_subdirectory(qtnetworkauth)
add_subdirectory(qtremoteobjects)
add_subdirectory(qtwebglplugin)
